--- a/app/components/Footer/footer.module.css
+++ b/app/components/Footer/footer.module.css
@@ -1,10 +1,41 @@
 .footer {
-    background-color: #333;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-  }
-  
+  background-color: #728862; 
+  color: white; 
+  padding: 40px 20px; 
+  text-align: left; 
+}
+
+.boxContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+  gap: 20px; 
+}
+
+.box {
+  background-color: #444; 
+  border-radius: 8px; 
+  padding: 20px; 
+}
+
+.boxTitle {
+  font-size: 20px; 
+  margin-bottom: 10px; 
+}
+
+.link {
+  color: #1e90ff; 
+  text-decoration: none; 
+  font-weight: bold; 
+}
+
+.link:hover {
+  text-decoration: underline; 
+}
+
+.footerText {
+  text-align: center; 
+  margin-top: 20px; 
+}
+
+
+
